<resources>
    <string name="app_name">MVPInventoryApp</string>
    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and stop editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="action_delete_all_entries">Delete All Inventories</string>

    <string name="editor_activity_title_new_inv">Add an Inventory</string>

    <string name="editor_activity_title_pet">Edit Inventory</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_product">Product</string>

    <string name="category_supplier">Supplier</string>

    <string name="category_price">Price</string>

    <string name="category_quantity">Quantity</string>

    <string name="hint_inventory_name">Name</string>

    <string name="hint_inventory_model">Model</string>

    <string name="hint_inventory_price">Price</string>

    <string name="hint_inventory_supplier">Supplier</string>

    <string name="hint_quantity">Quantity</string>

    <string name="unit_inventory_price">$</string>

    <string name="editor_insert_inventory_successful">Inventory saved</string>

    <string name="editor_insert_inventory_failed">Error with saving inventory</string>

    <string name="editor_update_inventory_successful">Inventory updated</string>

    <string name="editor_update_inventory_failed">Error with updating inventory</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding an inventory</string>

    <string name="editor_delete_inventory_successful">Inventory deleted</string>

    <string name="notDeleted">Deletion canceled</string>

    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>

    <string name="delete_dialog_msg">Delete this inventory?</string>

    <string name="deleteAll">Delete all inventories?</string>

    <string name="allProductsDeleted">All products removed</string>

    <string name="editor_minus_button">-</string>

    <string name="edit_plus_button">+</string>

    <string name="edit_initial_inventory_quantity"></string>

    <string name="yes">Yes</string>

    <string name="no">No</string>


</resources>
