<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activity.Editor.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_product" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_inventory_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_name"
                android:inputType="textCapWords" />

            <!-- Model field -->
            <EditText
                android:id="@+id/edit_model"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_model"
                android:inputType="textCapWords" />


            <ImageView
                android:id="@+id/image_view_takePhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:src="@drawable/no_image" />

            <Button
                android:id="@+id/button_takePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:onClick="dispatchTakePictureIntent"
                android:text="Add photo" />

        </LinearLayout>
    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_inventory_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_supplier" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_inventory_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_price"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_weight_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_inventory_price" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/edit_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_quantity"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
